feat: implement /api/ps endpoint
Fixes #2605
